# mesh-cni

./: Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.github/workflows/: container-amd64.yaml  container-arm64.yaml  container.yaml  rust.yaml
charts/homelab-cni/: Chart.yaml  values.yaml
charts/homelab-cni/templates/: _helpers.tpl  agent-clusterrole.yaml  agent-clusterrolebinding.yaml  agent-daemonset.yaml  agent-serviceaccount.yaml
charts/mesh-cni/: Chart.yaml  values.yaml
charts/mesh-cni/crds/: identity.yaml  meshendpoint.yaml
charts/mesh-cni/templates/: _helpers.tpl  agent-clusterrole.yaml  agent-clusterrolebinding.yaml  agent-configmap.yaml  agent-daemonset.yaml  agent-serviceaccount.yaml  controller-clusterrole.yaml  controller-clusterrolebinding.yaml  controller-configmap.yaml  controller-deployment.yaml  controller-serviceaccount.yaml
homelab-cni/: Cargo.toml  build.rs
homelab-cni-common/: Cargo.toml
homelab-cni-common/src/: lib.rs
homelab-cni-ebpf/: Cargo.toml
homelab-cni-ebpf/src/: egress.rs  ingress.rs  lib.rs  main.rs
homelab-cni/src/: config.rs  lib.rs  main.rs  metrics.rs
homelab-cni/src/agent/: ip.rs  mod.rs
homelab-cni/src/controller/: mod.rs
homelab-cni/src/http/: mod.rs
homelab-cni/src/kubernetes/: mod.rs
kind/: single-node.yaml
mesh-cni/: Cargo.toml  build.rs
mesh-cni-agent/: Cargo.toml  build.rs
mesh-cni-agent/src/: cni.rs  config.rs  lib.rs  main.rs
mesh-cni-agent/src/agent/: bpf.rs  ip.rs  mod.rs
mesh-cni-agent/src/agent/ip/: server.rs  state.rs
mesh-cni-agent/src/agent/service/: mod.rs  serve.rs  server.rs  state.rs
mesh-cni-agent/src/controller/: mod.rs
mesh-cni-agent/src/http/: error.rs  mod.rs
mesh-cni-agent/src/kubernetes/: cluster.rs  mod.rs  pod.rs  service.rs  state.rs
mesh-cni-agent/src/kubernetes/controllers/service/: controller.rs  mod.rs  state.rs
mesh-cni-api/: Cargo.toml  build.rs
mesh-cni-api/proto/bpf/v1/: bpf.proto
mesh-cni-api/proto/cni/v1/: cni.proto  types.proto
mesh-cni-api/proto/conntrack/v1/: conntrack.proto
mesh-cni-api/proto/ip/v1/: ip.proto
mesh-cni-api/proto/policy/v1/: policy.proto
mesh-cni-api/proto/service/v1/: service.proto
mesh-cni-api/src/: lib.rs  tables.rs
mesh-cni-cli/: Cargo.toml
mesh-cni-cli/src/: cli.rs  client.rs  conntrack.rs  ip.rs  main.rs  policy.rs  service.rs
mesh-cni-cluster/: Cargo.toml
mesh-cni-cluster-controller/: Cargo.toml
mesh-cni-cluster-controller/src/: context.rs  controller.rs  error.rs  lib.rs  runtime.rs
mesh-cni-cluster/src/: context.rs  controller.rs  error.rs  lib.rs  runtime.rs
mesh-cni-cluster/src/crds/: cluster.rs  mod.rs
mesh-cni-common/: Cargo.toml
mesh-cni-common/src/: lib.rs  service.rs  service_v4.rs
mesh-cni-crds/: Cargo.toml
mesh-cni-crds/src/: lib.rs
mesh-cni-crds/src/v1alpha1/: cluster.rs  identity.rs  meshendpoint.rs  mod.rs
mesh-cni-ebpf/: Cargo.toml
mesh-cni-ebpf-common/: Cargo.toml
mesh-cni-ebpf-common/src/: conntrack.rs  lib.rs  policy.rs  service.rs
mesh-cni-ebpf/src/: egress.rs  ingress.rs  lib.rs  main.rs  service.rs
mesh-cni-identity/: Cargo.toml
mesh-cni-identity-controller/: Cargo.toml
mesh-cni-identity-controller/src/: context.rs  controller.rs  error.rs  lib.rs  node.rs  pod.rs  runtime.rs
mesh-cni-identity-gen-controller/: Cargo.toml
mesh-cni-identity-gen-controller/src/: context.rs  controller.rs  lib.rs  runtime.rs
mesh-cni-identity/src/: context.rs  controller.rs  error.rs  lib.rs  runtime.rs
mesh-cni-identity/src/crds/: identity.rs  mod.rs
mesh-cni-k8s-utils/: Cargo.toml
mesh-cni-k8s-utils/src/: lib.rs
mesh-cni-plugin/: Cargo.toml
mesh-cni-plugin/src/: add.rs  check.rs  config.rs  delete.rs  error.rs  gc.rs  lib.rs  main.rs  response.rs  types.rs  version.rs
mesh-cni-policy/: Cargo.toml
mesh-cni-policy-controller/: Cargo.toml
mesh-cni-policy-controller/src/: context.rs  controller.rs  error.rs  identity.rs  lib.rs  runtime.rs  selector.rs
mesh-cni-policy-ebpf/: Cargo.toml  build.rs
mesh-cni-policy-ebpf/src/: ingress.rs  ipv4.rs  lib.rs  main.rs
mesh-cni-policy/src/: context.rs  controller.rs  error.rs  lib.rs  runtime.rs
mesh-cni-service/: Cargo.toml
mesh-cni-service-bpf-controller/: Cargo.toml
mesh-cni-service-bpf-controller/src/: context.rs  controller.rs  error.rs  lib.rs  metrics.rs  runtime.rs
mesh-cni-service-controller/: Cargo.toml
mesh-cni-service-controller/src/: context.rs  controller.rs  error.rs  lib.rs  metrics.rs
mesh-cni-service-ebpf/: Cargo.toml
mesh-cni-service-ebpf/src/: lib.rs  main.rs  service.rs
mesh-cni-service/src/: controller.rs  utils.rs
mesh-cni/src/: add.rs  agent.rs  bpf.rs  cni.rs  config.rs  controller.rs  delete.rs  error.rs  lib.rs  main.rs  metrics.rs  response.rs
mesh-cni/src/agent/: bpf.rs  metrics.rs  mod.rs
mesh-cni/src/agent/ip/: mod.rs  state.rs
mesh-cni/src/agent/service/: mod.rs  server.rs  state.rs
mesh-cni/src/bpf/: conntrack.rs  loader.rs  mod.rs
mesh-cni/src/bpf/cni/: api.rs  mod.rs
mesh-cni/src/bpf/conntrack/: api.rs  mod.rs
mesh-cni/src/bpf/ip/: convert.rs  mod.rs  server.rs  state.rs
mesh-cni/src/bpf/loader/: api.rs  mod.rs  state.rs
mesh-cni/src/bpf/policy/: mod.rs  state.rs
mesh-cni/src/bpf/service/: api.rs  mod.rs  state.rs
mesh-cni/src/controller/: crds.rs  mod.rs
mesh-cni/src/http/: metrics.rs  mod.rs  readiness.rs
mesh-cni/src/http/grpc/: cni.rs  conntrack.rs  ip.rs  mod.rs  policy.rs  service.rs
mesh-cni/src/kubernetes/: cluster.rs  mod.rs  node.rs  service.rs  state.rs
mesh-cni/src/kubernetes/controllers/: metrics.rs  mod.rs  utils.rs
mesh-cni/src/kubernetes/controllers/bpf_service/: context.rs  controller.rs  mod.rs  state.rs
mesh-cni/src/kubernetes/controllers/ip/: context.rs  controller.rs  mod.rs
mesh-cni/src/kubernetes/controllers/service/: context.rs  controller.rs  mod.rs  state.rs
mesh-cni/src/kubernetes/crds/: meshendpoint.rs  mod.rs
