[workspace]
resolver = "2"
members = [
    "mesh-cni-api",
    "mesh-cni",
    "mesh-cni-cli",
    "mesh-cni-common",
    "mesh-cni-ebpf",
    "mesh-cni-plugin",
]
default-members = ["mesh-cni-plugin", "mesh-cni", "mesh-cni-common", "mesh-cni-api", "mesh-cni-cli"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
ahash = { version = "0.8" }
async-stream = "0.3.6"
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
axum = { version = "0.8.4", features = ["tokio"]}
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6.1"}
futures = { version = "0.3" }
http-body-util = { version = "0.1.3" }
http = { version = "1.3.1"}
hyper = { version = "1.7.0" }
hyperlocal = { version = "0.9.1" }
hyper-util = { version = "0.1.16", features = ["client-legacy"]}
ipnetwork = { version = "0.21" }
libc = { version = "0.2.159", default-features = false }
k8s-openapi = { version = "0.25", features = ["v1_32"] }
kube = { version = "1.1", default-features = false, features = [
  "client",
  "rustls-tls",
  "aws-lc-rs",
  "derive",
  "runtime",
  "unstable-runtime"
] }
memoffset = { version = "0.9.1" }
netns-rs = "0.1.0"
network-types = { version = "0.0.8" }
prometheus-client = { version = "0.23.1" }
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-otlp = { version = "0.30" }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
schemars = { version = "0.8"} # update after kube-rs bump 
semver = { version = "1" }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1" }
serde_yaml = { version = "0.9.34" }
tabled = { version = "0.20.0" }
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7"}
tokio-rustls = { version = "0.26" }
tokio-stream = { version = "0.1.17" }
tower = { version = "0.5.2"}
prost = { version = "0.14.1"}
tonic = { version = "0.14.1" }
tonic-prost = { version = "0.14.1" }
tonic-prost-build = { version = "0.14.1" }
thiserror = { version = "2" }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = { version = "2.5.0" }
which = { version = "8.0.0"}

[profile.release.package.mesh-cni-ebpf]
debug = 2
codegen-units = 1
