[package]
name = "homelab-cni-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
homelab-cni-common = { path = "../homelab-cni-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "homelab-cni"
path = "src/main.rs"
