[package]
name = "mesh-cni-api"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }
walkdir = { workspace = true }

[lib]
name = "mesh_cni_api"
path = "src/lib.rs"
