[package]
name = "mesh-cni-cli"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
mesh-cni-api = { path = "../mesh-cni-api" }

anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive"] }
hyper-util = { workspace = true }
semver = { workspace = true }
tabled = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "mesh"
path = "src/main.rs"

