[package]
name = "mesh-cni-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mesh-cni-crds = { path = "../mesh-cni-crds" }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lib]
name = "mesh_cni_cluster"
path = "src/lib.rs"
