[package]
name = "mesh-cni-crds"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
mesh-cni-ebpf-common = { path = "../mesh-cni-ebpf-common", features = ["user"] }
mesh-cni-k8s-utils = { path = "../mesh-cni-k8s-utils" }
ahash = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lib]
name = "mesh_cni_crds"
path = "src/lib.rs"

[dev-dependencies]
http = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_34"] }
