[package]
name = "mesh-cni-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
mesh-cni-common = { path = "../mesh-cni-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "mesh-cni"
path = "src/main.rs"
