[package]
name = "mesh-cni-k8s-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
name = "mesh_cni_k8s_utils"
path = "src/lib.rs"
