[package]
name = "mesh-cni-plugin"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
mesh-cni-api = { path = "../mesh-cni-api" }

aya = { workspace = true}
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive"] }
ipnetwork = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "mesh-cni-plugin"
path = "src/main.rs"

[lib]
name = "mesh_cni_plugin"
path = "src/lib.rs"
