[package]
name = "mesh-cni-policy-controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mesh-cni-k8s-utils = { path = "../mesh-cni-k8s-utils" }

ahash = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true}
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[build-dependencies]

[lib]
name = "mesh_cni_policy_controller"
path = "src/lib.rs"
