[package]
name = "mesh-cni-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true}
mesh-cni-k8s-utils = { path = "../mesh-cni-k8s-utils" }
npa = { workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]

[lib]
name = "mesh_cni_policy"
path = "src/lib.rs"
