[package]
name = "mesh-cni-service-controller"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
ahash = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_34"] }
kube = { workspace = true }
mesh-cni-crds = { path = "../mesh-cni-crds" }
mesh-cni-k8s-utils = { path = "../mesh-cni-k8s-utils" }
opentelemetry = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
