[package]
name = "mesh-cni-service-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
mesh-cni-ebpf-common = { path = "../mesh-cni-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }
memoffset = { workspace = true } 

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "mesh-cni"
path = "src/main.rs"
