[package]
name = "mesh-cni"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
mesh-cni-common = { path = "../mesh-cni-common", features = ["user"] }
mesh-cni-plugin = { path = "../mesh-cni-plugin"}
mesh-cni-api = { path = "../mesh-cni-api"}

ahash = { workspace = true }
async-stream = { workspace = true }
axum = { version = "0.8.4", features = ["tokio"]}
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true}
netns-rs = { workspace = true }
network-types = { workspace = true }
prometheus-client = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }

[[bin]]
name = "mesh-cni-agent"
path = "src/main.rs"

[lib]
name = "mesh_cni_agent"
path = "src/lib.rs"
