[package]
name = "mesh-cni"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
mesh-cni-k8s-utils = { path = "../mesh-cni-k8s-utils" }
mesh-cni-ebpf-common = { path = "../mesh-cni-ebpf-common", features = ["user"] }
mesh-cni-plugin = { path = "../mesh-cni-plugin"}
mesh-cni-api = { path = "../mesh-cni-api"}
mesh-cni-identity-gen-controller = { path = "../mesh-cni-identity-gen-controller"}
mesh-cni-identity-controller = { path = "../mesh-cni-identity-controller"}
mesh-cni-service-controller = { path = "../mesh-cni-service-controller" }
mesh-cni-service-bpf-controller = { path = "../mesh-cni-service-bpf-controller" }
mesh-cni-crds = { path = "../mesh-cni-crds" }

ahash = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { version = "0.8.4", features = ["tokio"]}
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true, features = ["preserve_order"]}

http = { workspace = true }
ipnetwork = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_34"] }
kube = { workspace = true}
netns-rs = { workspace = true }
network-types = { workspace = true }
nix = { workspace = true, features = ["time"] }
prometheus-client = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }

[[bin]]
name = "mesh-cni"
path = "src/main.rs"

[lib]
name = "mesh_cni"
path = "src/lib.rs"
